# clairvoyance

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.frontend  Dockerfile.nginx  Dockerfile.rt_consumer  README.md  astro.config.mjs  clairvoyance.code-workspace  database.py  docker-compose.yml  gtfs_loader.py  init_db.py  main.py  models.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.code-workspace  reset_db.py  skills-lock.json  start.sh  tailwind.config.mjs
gtfs-processor/: .gitignore  Dockerfile.realtime  Dockerfile.static  README.md  gtfs_config.json  pyproject.toml  pyrightconfig.json
gtfs-processor/shared/gtfs-db-types/: types.ts
gtfs-processor/src/: cli.py  gen_ts_types.py  test.py
gtfs-processor/src/database/: database_manager.py
gtfs-processor/src/ingest_pipeline/: realize_instances.py  realtime.py  static.py
gtfs-processor/src/ingest_pipeline/core/: types.py
gtfs-processor/src/ingest_pipeline/pipelines/gtfs/: agency_pipeline.py  calendar_dates_pipeline.py  feed_info_pipeline.py  routes_pipeline.py  shapes_pipeline.py  stop_time_instances_pipeline.py  stop_times_pipeline.py  stops_pipeline.py  trip_instances_pipeline.py  trips_pipeline.py  (+1 more)
gtfs-processor/src/ingest_pipeline/sinks/: async_fn_executor_sink.py  mongo_upsert_sink.py  postgres_upsert_sink.py
gtfs-processor/src/ingest_pipeline/sources/: local_file.py
gtfs-processor/src/ingest_pipeline/transforms/: csv_decoder.py
gtfs-processor/src/lib/: gtfs_realtime_pb2.py
gtfs-processor/src/models/: enums.py  mongo_schemas.py
gtfs-processor/src/parsing/: gtfs_config.py
gtfs-processor/src/pydantic_to_ts/: type_converter.py
gtfs-processor/src/utils/: convert.py  datetime.py  logger_config.py  model_diff.py
services/gtfs-processor/: dev-docs.md  gtfs_config.json  pyproject.toml
services/gtfs-processor/shared/: gtfs-types.ts
services/gtfs-processor/shared/gtfs-db-types/: index.ts  package.json  pnpm-lock.yaml  schemas.ts  types.ts
services/gtfs-processor/src/: cli.py  config.py  domain.py  gen_ts_types.py  main.py  model.py  realtime.main.py  static.main.py
services/gtfs-processor/src/database/: database_manager.py
services/gtfs-processor/src/ingest/: __init__.py  batch_upsert.py  gtfs_ingest_manager.py  gtfs_ingest_service.py
services/gtfs-processor/src/ingest_pipeline/: cli.py  realtime.py  static.py
services/gtfs-processor/src/lib/: gtfs_realtime_pb2.pyi
services/gtfs-processor/src/models/: __init__.py  enums.py  gtfs_enums.py  gtfs_models.py  mongo.schemas.py  mongo_schemas.py
services/gtfs-processor/src/parsing/: gtfs_reader.py  gtfs_realtime.py  parsed_gtfs_data.py
services/gtfs-processor/src/pydantic_to_ts/: __init__.py  converter.py  type_converter.py  zod_converter.py
services/gtfs-processor/src/utils/: convert.py  datetime.py  resources.py
(+2417 files in other folders)
