[project]
name = "gtfs-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "beanie>=2.0.0",
    "cachetools>=6.2.0",
    "jsonschema>=4.24.0",
    "memory-profiler>=0.61.0",
    "protobuf>=6.31.0",
    "pydantic>=2.11.9",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "types-pytz>=2025.2.0.20250516",
]

[tool]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    '**/*venv/**\*',
]
