[project]
name = "gtfs-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "cachetools>=6.2.0",
    "geoalchemy2>=0.18.1",
    "jsonschema>=4.24.0",
    "memory-profiler>=0.61.0",
    "protobuf>=6.31.0",
    "pydantic>=2.11.9",
    "db-models>=0.1.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.45",
    "types-pytz>=2025.2.0.20250516",
    "sqlmodel>=0.0.29",
    "asyncpg>=0.31.0",
]

[tool]


[tool.uv.sources]
db-models = { path = "../database/python", editable = true }
