[project]
name = "gtfs-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beanie>=1.29.0",
    "gtfs-realtime-bindings>=1.0.0",
    "motor>=3.7.0",
    "protobuf>=6.30.2",
    "pytz>=2025.2",
    "requests>=2.32.3",
]
